# Beldas-Adventure

./: README.md  compile.bat  main.cpp  settings
Assets/piskel/: BlueSlime.piskel  GreenSlime.piskel  RedSlime.piskel
engine/render/: shader.hpp
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.c  main.h  resource_file.rc  settings.h
src/.cache/clangd/index/: BSC-Engine.c.04C5848722AEA4D5.idx  BSC-Engine.h.8284E6DAE75EE2FA.idx  debug.c.6395CD14C1C05F38.idx  debug.h.552EB9D6F1562034.idx  glad.c.A69ED86023DBEAEB.idx  glad.h.C22DF22A43A2202D.idx  glfw3.h.AB171B3795BE95CF.idx  io.c.042963DA5AB138C8.idx  io.h.1EFA06343AB264DA.idx  khrplatform.h.CA357138920B7FDD.idx  linmath.h.9767B2864A785872.idx  main.c.E32B843FD2E4C4EC.idx  render.c.6BAD4DECAE47B389.idx  render.h.557AB1F5F281B2CE.idx  shader.c.4957905F47E5E96D.idx  shader.h.AB57E5E5CB04EC1A.idx  window.c.0A147538015F39CA.idx  window.h.E7DF6EC8A9655FEE.idx
src/engine/: BSC-Engine.c  BSC-Engine.h  CMakeLists.txt  debug.h  glad.c  io.h  render.h  shader.h  window.h
src/engine/include/glad/: glad.h
src/engine/io/: io.c
src/engine/render/: render.c  shader.c
src/engine/tools/: debug.c
src/engine/window/: window.c
src/include/glad/: gl.h
src/info/: info.rc
